2006/02/15 1.2.1:
 - Fixed bug where returning newparams in a post hook would cause infinite recursion.
 - Fixed bug where "meta load" could load the same plugin multiple times.
 - Fixed bug where unloading a plugin could crash internal hook states.
 - Fixed bug where unhooking a single hook would clear the hook chain.

2006/01/07 1.2:
 - Added SourceHook API for modifying parameters in the hook chain.
 - Added SourceHook API for declaring and hooking manual vtable hooks.
 - Added better API for querying an interface factory.
 - Added API for formatting an OS-independent path.
 - Added Listen Server Launcher to the graphical installer.
 - Fixed bug where failed plugins could crash the plugin list.
 - NOTE: SourceHook changes may require plugins to be recompiled against
    the new API.

2005/12/06 1.1.2:
 - Added interface overriding/sharing examples to sample plugins.
 - Added API to help guessing at Valve interface versions.
 - Fixed various memory leaks.
 - Fixed memory corruption bug on vector copying.
 - Fixed other various template bugs.

2005/10/21 1.1.1:
 - Fixed a bug where AllPluginsLoaded() was not called after DLLInit().

2005/10/21 1.1:
 - Rewrote GameDLL loading code to be API version generic.
   As such, SourceMM will now easily support new API releases without
   an SDK release, such as the case with Day of Defeat:Source
 - Added more flexibility to plugin control by supplying an event system.
 - Removed dependency on libstdc++.so by supplying a small template library.
 - SourceHook internal API is now interface-based, meaning that future
   updates to the API will not break older plugins.  This update, however,
   breaks older plugins.
 - SourceHook is now re-entrant.
 - Added a basic automated installer (by Basic-Master).
 - Fixed a bug where games with changing game names would not work.
 - Fixed various bugs, including a cvarlist corruption bug on unloading plugins.

2005/07/07 1.00-RC2: