@@ -1,6 +1,5 @@
 // Microsoft Visual C++ generated resource script.
 //
-
 #define APSTUDIO_READONLY_SYMBOLS
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -26,8 +25,8 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 1,2,1,0
- PRODUCTVERSION 1,2,1,0
+ FILEVERSION 1,2,2,0
+ PRODUCTVERSION 1,2,2,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -44,12 +43,12 @@ BEGIN
         BEGIN
             VALUE "Comments", "Metamod: Source"
             VALUE "FileDescription", "Metamod: Source"
-            VALUE "FileVersion", "1.2.1"
+            VALUE "FileVersion", "1.2.2"
             VALUE "InternalName", "sourcemm"
             VALUE "LegalCopyright", "Copyright (c) 2004-2006, Metamod: Source Development Team"
             VALUE "OriginalFilename", "server.dll"
             VALUE "ProductName", "Metamod: Source"
-            VALUE "ProductVersion", "1.2.1"
+            VALUE "ProductVersion", "1.2.2"
         END
     END
     BLOCK "VarFileInfo"
