@@ -1,3 +1,11 @@
+2006/XX/XX 1.2.2:
+ - Added ClientConPrintf to API for printing text in a client's console. This does the
+   same thing as IVEngineServer::ClientPrintf except that it allows string formatting.
+ - Added client version of "meta" command in order to allow clients to view version 
+   information and a list of loaded plugins.
+ - Fixed a bug where the mm_pluginsfile cvar was being ignored.
+ - Fixed a memory leak when using ISmmAPI::InterfaceSearch.
+
 2006/02/15 1.2.1:
  - Fixed bug where returning newparams in a post hook would cause infinite recursion.
  - Fixed bug where "meta load" could load the same plugin multiple times.
